[package]
name = "datafeed-cache-client"
version = "0.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = { version = "0.15.0" }
datafeed-cache-shared = { path = "../datafeed-cache-shared" }

[lib]
name = "datafeed_cache_client"
path = "src/lib.rs"