[package]
name = "datafeed-cache-client"
edition = "2024"
version = "1.2.2"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = { version = "0.15.0" }
datafeed-cache-shared = { path = "../datafeed-cache-shared" }
log = "0.4.27"

[lib]
name = "datafeed_cache_client"
path = "src/lib.rs"