[package]
name = "datafeed-cache-server"
edition = "2024"
version = "1.2.2"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }
actix-web = { version = "4.10.2" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
env_logger = "0.11.7"
log = "0.4.27"
geo = { version = "0.30.0" }
chrono = { version = "0.4.40", features = ["serde"] }
datafeed-cache-shared = { path = "../datafeed-cache-shared" }

[[bin]]
name = "datafeed_cache_server"
path = "src/main.rs"